services/counterterrorism-service/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: counterterrorism-service
  namespace: intelligence
  labels:
    app: counterterrorism-service
spec:
  type: ClusterIP
  ports:
    - port: 3020
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: counterterrorism-service

---
apiVersion: v1
kind: Service
metadata:
  name: threat-assessment-service
  namespace: intelligence
  labels:
    app: threat-assessment-service
spec:
  type: ClusterIP
  ports:
    - port: 3021
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: threat-assessment-service
